# mcp-pandoc

./: .gitignore  .yamllint.yaml  CHEATSHEET.md  CONTRIBUTING.md  README.md  pyproject.toml  smithery.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
src/mcp_pandoc/: server.py
testing/output/: test_output.docx
tests/: test_advanced_features.py  test_conversions.py
tests/fixtures/: test.docx  test.epub  test.ipynb  test.odt
tests/output/: test.docx  test.epub  test.html  test.ipynb  test.md  test.odt  test.rst  test.tex
